# synapsegit

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  cloudbuild.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
api/local/v1/: openapi.json
crates/synapse-application/: Cargo.toml  README.md
crates/synapse-application/src/: human.rs  lib.rs  tests.rs
crates/synapse-artifact/: Cargo.toml  README.md
crates/synapse-artifact-journal/: Cargo.toml  README.md
crates/synapse-artifact-journal/src/: lib.rs
crates/synapse-artifact-journal/tests/: durable_v2.rs
crates/synapse-artifact/src/: approval.rs  checkout.rs  durable.rs  lib.rs  workflow.rs
crates/synapse-artifact/tests/: acceptance_contract.rs  approval.rs  checkout.rs  contract.rs  durable_workflow.rs  mapper.rs  sequential.rs  timestamp_validation.rs  workflow.rs
crates/synapse-artifact/tests/support/: mod.rs
crates/synapse-canonical/: Cargo.toml
crates/synapse-canonical/src/: lib.rs
crates/synapse-canonical/tests/: golden.rs
crates/synapse-cas/: Cargo.toml
crates/synapse-cas/src/: graph.rs  lib.rs  store.rs
crates/synapse-cas/tests/: filesystem_store.rs
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: main.rs
crates/synapse-cli/tests/: cli.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: authorization.rs  human_decision.rs  lib.rs
crates/synapse-core/tests/: authorization.rs  human_decision.rs  repository.rs
crates/synapse-creator/: Cargo.toml  README.md
crates/synapse-creator/src/: lib.rs
crates/synapse-creator/tests/: workflow.rs
crates/synapse-local-http/: Cargo.toml  README.md
crates/synapse-local-http/assets/: app.css  app.js
crates/synapse-local-http/src/: lib.rs  main.rs  problem.rs  security.rs
crates/synapse-local-http/templates/: base.html  error.html  index.html  project.html  session.html
crates/synapse-local-service/: Cargo.toml  README.md
crates/synapse-local-service/src/: catalog.rs  dto.rs  lib.rs  service.rs
crates/synapse-local-service/tests/: creator_workflow.rs  maintenance.rs  read_facade.rs
crates/synapse-observation/: Cargo.toml  README.md
crates/synapse-observation/src/: byte_identity.rs  lib.rs
crates/synapse-observation/tests/: byte_identity.rs
crates/synapse-projection/: Cargo.toml  README.md
crates/synapse-projection/src/: lib.rs
crates/synapse-projection/tests/: projection.rs
crates/synapse-publication/: Cargo.toml  README.md
crates/synapse-publication/examples/: generate_evaluation_corpus.rs
crates/synapse-publication/src/: generic_artifact.rs  generic_artifact_render.rs  lib.rs  main.rs  model.rs  render.rs
crates/synapse-publication/tests/: cli.rs  evaluation_corpus.rs  export.rs  generic_artifact.rs
crates/synapse-schema/: Cargo.toml
crates/synapse-schema/src/: canonical_timestamp.rs  lib.rs  scaled_integer.rs
crates/synapse-schema/tests/: integration.rs  value_types.rs
crates/synapse-schema/tests/fixtures/: analysis-result.json  assurance.json  capture-profile.json  claim-reaction.json  claim.json  evidence-gap.json  observation.json  subject.json
crates/synapse-sqlite/: Cargo.toml
crates/synapse-sqlite/src/: lib.rs
crates/synapse-sqlite/tests/: ref_store.rs
deploy/gcp/: README.md
deploy/gcp/smoke/: smoke.sh
deploy/gcp/smoke/fixtures/: ai-output.txt  current.txt  original.txt
deploy/gcp/terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/github/: README.md  security-baseline.json
deploy/local/: README.md
docs/: README.md  cli_reference.md  cloud_service_architecture.md  core_concept.md  core_model.md  distribution.md  faq.md  generic_artifact_publication_roadmap.md  glossary.md  handoff.md  init_plan.md  install.md  license_ja.md  localhost_application_architecture.md  project_status.md  quickstart.md  runtime_architecture.md  security_model.md  stage0_execution_plan.md  usage_guide.md
docs/evaluation/publication-comprehension/v1/: README.md  oracle.json  privacy-canaries.json  protocol.json  questionnaire.json  response.schema.json  result-template.json
docs/presentations/: README.md  generate_user_scenarios_pptx.py  synapsegit_user_scenarios_ja.pptx
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
scripts/: generate_third_party_notices.mjs  manage_github_security.mjs  package_release.sh  score_publication_comprehension.mjs  test_publication_comprehension_scorer.mjs  verify_core_fixtures.mjs  verify_docs.mjs  verify_license.mjs  verify_local_api.mjs  verify_mermaid.mjs  verify_release_version.sh
spec/application/generic-artifact-publication/v1/: README.md  bundle-manifest.schema.json  checksums.schema.json  golden-vectors.json  projection.schema.json  public-target.schema.json
spec/application/generic-artifact/v1/: README.md  capabilities.json  capabilities.schema.json  digest-vectors.json  proposal-receipt.schema.json  public-error.schema.json  review-status.schema.json  scaled-integer-vectors-v1.json
spec/core/v0.1/: README.md  archive-profile.md  oid-profile.md  operations.md
spec/core/v0.1/fixtures/: actor-ai.json  actor-creator-a.json  actor-creator-b.json  actor-creator-nfd.json  ai-activity.json  base-commit.json  base-tree-a.json  base-tree-b.json  context-pack.json  decision-feedback.json  delegation-grant.json  golden.json  merge-commit-swapped.json  merge-commit.json  policy.json  proposal-commit.json  proposal-tree.json  proposal.txt  tombstone.json
spec/core/v0.1/schemas/: README.md  activity.schema.json  actor.schema.json  analysis-result.schema.json  assurance.schema.json  capture-profile.schema.json  claim-reaction.schema.json  claim.schema.json  commit.schema.json  common.schema.json  context-pack.schema.json  decision-feedback.schema.json  delegation-grant.schema.json  (+8 more)
(+16 files in other folders)
