[package]
name = "synapse-artifact-journal"
version = "0.3.0"
description = "Transport-neutral durable review journal for SynapseGit artifact applications"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
getrandom = "0.4.3"
rusqlite = { version = "=0.39.0", features = ["bundled"] }
sha2.workspace = true
