[package]
name = "synapse-canonical"
version = "0.2.0"
description = "Strict JSON, canonical bytes, and content identifiers for SynapseGit Core"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
sha2.workspace = true
unicode-normalization.workspace = true
