[package]
name = "synapse-cli"
version = "0.4.0"
description = "Stage 0 command-line interface for SynapseGit Core"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-canonical = { path = "../synapse-canonical" }
synapse-core = { path = "../synapse-core" }
synapse-creator = { path = "../synapse-creator" }
synapse-sqlite = { path = "../synapse-sqlite" }
