[package]
name = "synapse-creator"
version = "0.2.0"
description = "Local creator-facing provenance workflow for SynapseGit Stage 0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
getrandom = "0.4.3"
serde_json = "1.0.150"
sha2.workspace = true
synapse-application = { path = "../synapse-application" }
synapse-canonical = { path = "../synapse-canonical" }
synapse-cas = { path = "../synapse-cas" }
synapse-core = { path = "../synapse-core" }
synapse-observation = { path = "../synapse-observation" }
synapse-projection = { path = "../synapse-projection" }
synapse-sqlite = { path = "../synapse-sqlite" }
