[package]
name = "synapse-local-http"
version = "0.1.0"
description = "Loopback-only HTTP and UI transport for the SynapseGit local application"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "synapse-local"
path = "src/main.rs"

[dependencies]
askama = "=0.14.0"
axum = "=0.8.9"
getrandom = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
synapse-local-service = { path = "../synapse-local-service" }
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
synapse-creator = { path = "../synapse-creator" }
tower = { version = "0.5.3", features = ["util"] }
