[package]
name = "synapse-local-http"
version = "0.1.0"
description = "Loopback-only HTTP and UI transport for the SynapseGit local application"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "synapse-local"
path = "src/main.rs"

[dependencies]
askama = "=0.16.0"
axum = { version = "=0.8.9", features = ["multipart"] }
getrandom = "0.3.4"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
synapse-local-service = { path = "../synapse-local-service" }
tokio = { version = "=1.52.3", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
synapse-creator = { path = "../synapse-creator" }
tower = { version = "0.5.3", features = ["util"] }
