[package]
name = "synapse-local-service"
version = "0.2.0"
description = "Transport-neutral trusted facade for the SynapseGit localhost application"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
getrandom = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-creator = { path = "../synapse-creator" }
synapse-sqlite = { path = "../synapse-sqlite" }
