[package]
name = "synapse-publication"
version = "0.4.0"
description = "Read-only public projection and local publication bundles for SynapseGit"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2.workspace = true
synapse-artifact = { path = "../synapse-artifact" }
synapse-canonical = { path = "../synapse-canonical" }
synapse-core = { path = "../synapse-core" }
synapse-creator = { path = "../synapse-creator" }
toml = "=1.1.3"

[dev-dependencies]
jsonschema = { version = "0.47.0", default-features = false }
synapse-application = { path = "../synapse-application" }

[target.'cfg(any(target_os = "linux", target_os = "android", target_vendor = "apple", target_os = "redox"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[[bin]]
name = "synapse-present"
path = "src/main.rs"
