[package]
name = "synapse-schema"
version = "0.2.0"
description = "Concrete schema and semantic validation for SynapseGit Core"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
jsonschema = { version = "0.47.0", default-features = false }
serde_json = "1.0.140"
synapse-canonical = { path = "../synapse-canonical" }
unicode-normalization.workspace = true
