[package]
name = "synapse-sqlite"
version = "0.1.0"
description = "Transactional SQLite RefStore and reflog for SynapseGit Core"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
rusqlite = { version = "=0.40.0", features = ["bundled"] }
