[package]
name = "synapse-sqlite"
version = "0.2.0"
description = "Transactional SQLite RefStore and reflog for SynapseGit Core"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
rusqlite = { version = "=0.39.0", features = ["bundled"] }
sha2.workspace = true
